<resources>
    <string name="app_name">Quản lí tài chính</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">747001191749-506tpj5i7i03stqqd4pnsg65gohvgamc.apps.googleusercontent.com</string>
    <string name="zoomed_image">Hình ảnh phóng to</string>
    <string name="intro">Nếu có thắc mắc hoặc ý kiến gì, hãy liên hệ với tôi</string>
    <string name="view">Xem</string>
    <string name="username">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="forget">Quên mật khẩu?</string>
    <string name="Log_in">Đăng nhập</string>
    <string name="noacc">Nếu bạn chưa có tài khoản?</string>
    <string name="sign_up">Đăng kí với Google</string>
    <string name="save">Lưu thông tin đăng nhập</string>
    <string name="thank">Cảm ơn đã sử dụng app của mình!</string>
    <string name="ps">Đây là phụ lục !</string>
    <string name="about">Thông tin về mình</string>
    <string name="meo">Mẹo quản lí chi tiêu !</string>
    <string name="loss_internet">Mạng yếu hoặc không có kết nối</string>
    <string name="have_internet">Mạng đã kết nối lại</string>
    <string name="reset_pass">Đặt lại mật khẩu</string>
    <string name="send">Gửi</string>
    <string name="email_none">Email không được để trống</string>
    <string name="check_email_to_reset_password">Vui lòng kiểm tra email để đặt lại mật khẩu.</string>
    <string name="failed_email_to_reset_pass">Gửi email đặt lại mật khẩu thất bại.</string>
    <string name="blank">Email hoặc mật khẩu không được để trống</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="invalid_info">Thông tin đăng nhập không hợp lệ</string>
    <string name="user_notexist">User không tồn tại</string>
    <string name="cancel">Hủy</string>
    <string name="nhap_gmail_login">Nhập tài khoản gmail</string>
    <string name="nhap_pass_login">Nhập mật khẩu</string>
    <string name="xac_thuc_gmail">Xác thực gmail</string>
    <string name="dang_ki_tk">Đăng kí tài khoản</string>
    <string name="da_co_tk">Nếu bạn đã có tài khoản thì click vào</string>
    <string name="day">đây</string>
    <string name="vao_xacthuc">Vui lòng vào gmail của bạn để vào link xác thực</string>
    <string name="guimafail">Gửi mã xác thực thất bại</string>
    <string name="ko_thay">Không tìm thấy gmail này hoặc gmail đã đăng nhập!</string>
    <string name="xt_tb">Xác thực thất bại</string>
    <string name="chua_xt">Email chưa được xác thực.</string>
    <string name="dk_tb">Đăng kí thất bại</string>
    <string name="tao_tk_tc">Tạo tài khoản thành công.</string>
    <string name="tao_tk_tb">Tạo tài khoản thất bại</string>
    <string name="pick_cd">Vui lòng chọn chế độ phù hợp với bạn</string>
    <string name="dx">Đăng xuất ?</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="gia_dinh">Gia đình</string>
    <string name="cong_ty">Công ty</string>
    <string name="cho_nam">Giành cho các chàng trai</string>
    <string name="cho_nu">Đặc biệt tặng cho các nàng</string>
    <string name="cho_family">Bất kể ai cũng có thể vun vén tổ ấm của mình</string>
    <string name="cho_company">Phần này cho các doanh nghiệp, công ty</string>
    <string name="dien_full">Vui lòng điền đầy đủ email và mật khẩu</string>
    <string name="time_md">00 giờ 00 phút</string>
    <string name="enter_luong">Nhập lượng thu được</string>
    <string name="khoan_thu">Khoản thu:</string>
    <string name="luong_thu">Lượng thu:</string>
    <string name="image_thu">Chọn ảnh khoản thu</string>
    <string name="luu_data">Lưu data</string>
    <string name="nhap_vao">Nhập vào đây</string>
    <string name="enter_chi">Nhập lượng đã chi</string>
    <string name="khoan_chi">Khoản chi:</string>
    <string name="luong_chi">Lượng chi:</string>
    <string name="image_chi">Chọn ảnh khoản chi</string>
    <string name="gio">giờ</string>
    <string name="phut">phút</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="chon_anh">Chọn từ thư viện</string>
    <string name="chon_image">Chọn ảnh</string>
    <string name="tai_anh_tc">Tải ảnh lên thành công</string>
    <string name="tai_anh_tb">Tải ảnh lên thất bại:</string>
    <string name="thieu_khoan_thu">Vui lòng nhập chi tiết khoản thu</string>
</resources>