<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen_dn"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/nen"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle = "bold"
                    android:textSize="20sp"
                    android:text="@string/username"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/edtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle = "bold"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:text="@string/pass" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtNumberPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:ems="10" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtQuenPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize = "15sp"
                android:textColor="#D6E16F"
                android:layout_gravity="right"
                android:text="@string/forget" />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#39B4EC"
                android:text="@string/Log_in"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noacc"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnDangKi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#39B4EC"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <CheckBox
                android:id="@+id/chkLuuDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/save" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/thank"
            android:textColor="#F11C1C"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="gone"
        android:background="@drawable/shapebutton">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/hi"
            app:civ_border_width="2dp"
            app:civ_border_color="#70F476"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="100dp"
            android:text="@string/ps"
            android:textSize="28dp"
            android:textColor="#EAA691" />

        <Button
            android:id="@+id/btnIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:backgroundTint="#7B1C8C"
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="#EA2213" />

        <Button
            android:id="@+id/btnMeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:backgroundTint="#7B1C8C"
            android:textSize="20sp"
            android:text="@string/meo"
            android:textColor="#EA2213" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>



